--- a/Flex exercises/04-flex-information.html
+++ b/Flex exercises/04-flex-information.html
@@ -9,18 +9,22 @@
   </head>
   <body>
     <div class="title">Information!</div>
+    <div class="all">
         <div class="images">
-                <img src="../images Odin project/barberry.png" alt="barberry">
-                <img src="../images Odin project/chilli.png" alt="chili">
-                <img src="../images Odin project/pepper.png" alt="pepper">
-                <img src="../images Odin project/saffron.png" alt="saffron">
+    <img src="../images Odin project/barberry.png" alt="barberry">
+
+    <img src="../images Odin project/chilli.png" alt="chili">
+
+    <img src="../images Odin project/pepper.png" alt="pepper">
+
+    <img src="../images Odin project/saffron.png" alt="saffron">
         </div>
         <div class="texts">
-                <div class="text">We have so many plants. Yay plants.</div>
-                <div class="text">This is another type of plant. Isn't it nice?</div>
-                <div class="text">This is a type of plant. We love this one.</div>
-                <div class="text">I'm running out of things to say about plants.</div>
-        </div>
+    <div class="text">This is a type of plant. We love this one.</div>
+    <div class="text">This is another type of plant. Isn't it nice?</div>
+    <div class="text">I'm running out of things to say about plants.</div>
+    <div class="text">We have so many plants. Yay plants.</div>
+</div>
     </div>
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
