--- a/My-little-webpage/index.html
+++ b/My-little-webpage/index.html
@@ -12,15 +12,17 @@
                 <div class="logo">
                     <img src="../images Odin project/Record_Store_Transparent.webp" alt="company-logo">
                 </div>
-                <div class="about"></div>
-                    <ul class="links">
-                        <li><a href="">Explore</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">FAQ</a></li>
+                <div class="about"></div> 
+                <ul class="links">
+                        <button class="login"> Log In </button>
+                        <button class="register"> Register </button>   
+                        <li><a href=""> Explore </a></li>
+                        <li><a href=""> Contact </a></li>
+                        <li><a href=""> FAQ </a></li>
                     </ul>
             </div>
             <div class="banner">
-                <p class="title"></p>
+                <p class="title"> Welcome to the marketplace for disgusting vinyl! </p>
                 <p class="explanation"></p>
                 <button class="type-one">
                     Sign up
