--- a/My-little-webpage/index.html
+++ b/My-little-webpage/index.html
@@ -23,11 +23,19 @@
             </div>
             <div class="banner">
                 <p class="title"> Welcome to the marketplace for disgusting vinyl! </p>
-                <p class="explanation"></p>
-                <button class="type-one">
-                    Sign up
-                </button>
+                <div class="frontpage-banner">
+                    <img src="../images Odin project/vinyl-records-wall-marketplace-epp-20230428-e1682994496244.webp" alt="vinyl-wall"></div>
                 <img src=""></img>
+            </div>
+            <div class="main">
+                <p class="subheader">Limited editions</p>
+                <div class="records">
+                <img src="../images Odin project/https___images.webp">
+                <img src="../images Odin project/LP-Nirvana-Nevermind.jpg">
+                <img src="../images Odin project/803786.jpg">
+                <img src="../images Odin project/D_NQ_NP_786397-MLA50571827137_072022-O.webp">
+                </div>        
+                <p class="explanation"></p>
             </div>
             <div class="content">
             </div>
